api/tests/models/snapshots/can_validate_model@users.snap
---
source: tests/models/main.rs
expression: res
---
Err(
    Custom(
        "{\"email\":[{\"code\":\"invalid email\",\"message\":null}],\"username\":[{\"code\":\"length\",\"message\":\"Name must be at least 2 characters long.\"}]}",
    ),
)
